objects/Contact.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Titel__c</fullName>
        <label>Titel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Titel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Haken ja = nicht kontaktieren | Haken nein = kontaktieren</inlineHelpText>
        <label>Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>aktiv</fullName>
                    <default>true</default>
                    <label>aktiv</label>
                </value>
                <value>
                    <fullName>inaktiv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VTLink__c</fullName>
        <formula>IF(

 BEGINS(ExternalId__c, &quot;vt.contact.&quot;),

 &quot;https://vt.doctari.de/index.php?module=Contacts&amp;parenttab=Marketing&amp;action=DetailView&amp;record=&quot;

     &amp; SUBSTITUTE(ExternalId__c, &quot;vt.contact.&quot;, &quot;&quot;),

   &quot;&quot;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ärztliche Direktion</fullName>
                </value>
                <value>
                    <fullName>Ärztliche Leitung</fullName>
                </value>
                <value>
                    <fullName>Bereichsleitung</fullName>
                </value>
                <value>
                    <fullName>Chefarzt/-ärztin</fullName>
                </value>
                <value>
                    <fullName>Dienstplanung</fullName>
                </value>
                <value>
                    <fullName>Direktion</fullName>
                </value>
                <value>
                    <fullName>Geschäftsführer</fullName>
                </value>
                <value>
                    <fullName>Inhaber (Praxis)</fullName>
                </value>
                <value>
                    <fullName>Jurist</fullName>
                </value>
                <value>
                    <fullName>Leitung (Management)</fullName>
                </value>
                <value>
                    <fullName>Oberarzt/Oberärztin</fullName>
                </value>
                <value>
                    <fullName>OP Leitung</fullName>
                </value>
                <value>
                    <fullName>Prokurist</fullName>
                </value>
                <value>
                    <fullName>InvoiceRecipient</fullName>
                    <label>Rechnungsempfänger</label>
                </value>
                <value>
                    <fullName>Referent/in</fullName>
                </value>
                <value>
                    <fullName>Sachbearbeitung</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>Stationsleitung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketoID__c</fullName>
        <externalId>true</externalId>
        <label>Marketo ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Person for Permanent Placement</description>
        <inlineHelpText>Contact Person for Permanent Placement</inlineHelpText>
        <label>PP Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KAM_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Person for Key Account Management</description>
        <inlineHelpText>Contact Person for Key Account Management</inlineHelpText>
        <label>KAM Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                    <label>Deutschland</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>EG</fullName>
                    <label>Ägypten</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Åland</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albanien</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algerien</label>
                </value>
                <value>
                    <fullName>VI</fullName>
                    <label>Amerikanische Jungferninseln</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>Amerikanisch-Samoa</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarktika</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua und Barbuda</label>
                </value>
                <value>
                    <fullName>GQ</fullName>
                    <label>Äquatorialguinea</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentinien</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenien</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                    <label>Aserbaidschan</label>
                </value>
                <value>
                    <fullName>ET</fullName>
                    <label>Äthiopien</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australien</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesch</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgien</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secretariat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secretariat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XingProfile__c</fullName>
        <description>Xing URL link
Robin S. 22.01.2019</description>
        <label>Xing Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Available_to__c</fullName>
        <label>Available to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommentPhone__c</fullName>
        <label>Comment Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LXCustomerNo__c</fullName>
        <formula>Text(Account.LXCustomerNo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LXCustomerNo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This shows that the email address from the record is invalid.
Robin S. 10.04.2019</description>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Title__c</fullName>
        <description>Specific academic graduate.
Robin S. 21.11.2019</description>
        <label>Special Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OAK RUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_from__c</fullName>
        <label>Available from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_to_2__c</fullName>
        <label>Available to (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_to_3__c</fullName>
        <label>Available to (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Representation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Representation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Opt_Out__c</fullName>
        <formula>OR(NOT(ISPICKVAL(Account.Status__c, &quot;Aktiv_Mailing&quot; )), NOT(ISPICKVAL(Account.Status__c, &quot;Aktiv - Vermittelbar&quot; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctors_Contact__c</fullName>
        <description>Contact Person for Doctors and their Responsibilities</description>
        <inlineHelpText>Contact Person for Doctors and their Responsibilities</inlineHelpText>
        <label>Doctors Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Orderer</fullName>
                </value>
                <value>
                    <fullName>Decision-maker professional</fullName>
                </value>
                <value>
                    <fullName>Decision-maker budget</fullName>
                </value>
                <value>
                    <fullName>Contract recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailSalutation__c</fullName>
        <formula>IF(TEXT( Special_Title__c ) != &quot;&quot;, T_SalutationHelper__c &amp; &quot; &quot; &amp; IF(ISPICKVAL(Salutation, &quot;Mr.&quot;), &quot;Herr&quot;, IF(ISPICKVAL(Salutation, &quot;Ms.&quot;), &quot;Frau&quot;, IF(ISPICKVAL(Salutation, &quot;Mrs.&quot;), &quot;Frau&quot;, &quot;&quot;))) &amp; &quot; &quot; &amp; TEXT(Titel__c) &amp; &quot; &quot; &amp; TEXT(Special_Title__c) &amp; &quot; &quot; &amp; LastName,

IF(TEXT(Titel__c) != &quot;&quot;, 
T_SalutationHelper__c &amp; &quot; &quot; &amp; IF(ISPICKVAL(Salutation, &quot;Mr.&quot;), &quot;Herr&quot;, IF(ISPICKVAL(Salutation, &quot;Ms.&quot;), &quot;Frau&quot;, IF(ISPICKVAL(Salutation, &quot;Mrs.&quot;), &quot;Frau&quot;, &quot;&quot;))) &amp; &quot; &quot; &amp; TEXT(Titel__c) &amp; &quot; &quot; &amp; LastName, 
T_SalutationHelper__c &amp; &quot; &quot; &amp; IF(ISPICKVAL(Salutation, &quot;Mr.&quot;), &quot;Herr&quot;, IF(ISPICKVAL(Salutation, &quot;Ms.&quot;), &quot;Frau&quot;, IF(ISPICKVAL(Salutation, &quot;Mrs.&quot;), &quot;Frau&quot;, &quot;&quot;))) &amp; &quot; &quot; &amp; LastName 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailSalutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_type__c</fullName>
        <label>Employment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedInProfile__c</fullName>
        <description>LinkedIn URL link
Robin S. 22.01.2019</description>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>T_CheckerReason__c</fullName>
        <label>[T]_CheckerReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_MarketoBounce__c</fullName>
        <label>[T]_MarketoBounce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_MarketoReason__c</fullName>
        <label>[T]_MarketoReason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_from_2__c</fullName>
        <label>Available from (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_from_3__c</fullName>
        <label>Available from (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InterestInDoctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LXContactPersonId__c</fullName>
        <defaultValue>-1</defaultValue>
        <description>For Landwehr sync.</description>
        <label>LXContactPersonId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MigrationProtocol__c</fullName>
        <label>Migration Protocol</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caregivers_Contact__c</fullName>
        <description>Contact Person for Caregivers and their Responsibilities</description>
        <inlineHelpText>Contact Person for Caregivers and their Responsibilities</inlineHelpText>
        <label>Caregivers Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Orderer</fullName>
                </value>
                <value>
                    <fullName>Decision-maker professional</fullName>
                </value>
                <value>
                    <fullName>Decision-maker budget</fullName>
                </value>
                <value>
                    <fullName>Contract recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_BounceCategoryMC__c</fullName>
        <label>[T]_BounceCategoryMC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_EmailToolCounter__c</fullName>
        <formula>IF(
					AND(T_MarketoBounce__c = &apos;Hard bounce&apos;, T_BounceCategoryMC__c = &apos;Hard bounce&apos;, 
									OR(T_EmailValidationTheChecker__c = &apos;undeliverable&apos;,T_EmailValidationTheChecker__c = &apos;risky&apos;) 
								), 3 , 
					IF(
									OR(
													AND(T_MarketoBounce__c = &apos;Hard bounce&apos;, T_BounceCategoryMC__c = &apos;Hard bounce&apos;, 
													OR(T_EmailValidationTheChecker__c != &apos;undeliverable&apos;,T_EmailValidationTheChecker__c != &apos;risky&apos;)
												),
													AND(T_MarketoBounce__c != &apos;Hard bounce&apos;, T_BounceCategoryMC__c = &apos;Hard bounce&apos;, 
													OR(T_EmailValidationTheChecker__c = &apos;undeliverable&apos;,T_EmailValidationTheChecker__c = &apos;risky&apos;)
												),
													AND(T_MarketoBounce__c = &apos;Hard bounce&apos;, T_BounceCategoryMC__c != &apos;Hard bounce&apos;, 
													OR(T_EmailValidationTheChecker__c = &apos;undeliverable&apos;,T_EmailValidationTheChecker__c = &apos;risky&apos;)
												)
									), 2, 
					IF(
									OR(
													AND(T_MarketoBounce__c != &apos;Hard bounce&apos;, T_BounceCategoryMC__c = &apos;Hard bounce&apos;, 
													OR(T_EmailValidationTheChecker__c != &apos;undeliverable&apos;,T_EmailValidationTheChecker__c != &apos;risky&apos;)
												),
													AND(T_MarketoBounce__c != &apos;Hard bounce&apos;, T_BounceCategoryMC__c != &apos;Hard bounce&apos;, 
													OR(T_EmailValidationTheChecker__c = &apos;undeliverable&apos;)
												),
													AND(T_MarketoBounce__c = &apos;Hard bounce&apos;, T_BounceCategoryMC__c != &apos;Hard bounce&apos;, 
													OR(T_EmailValidationTheChecker__c != &apos;undeliverable&apos;)
												)
									), 1, 0))
                    
	
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]_EmailToolCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_SalutationHelper__c</fullName>
        <formula>IF( ISPICKVAL(Salutation , &quot;Mr.&quot;) || ISPICKVAL(Salutation , &quot;Herr&quot;), &quot;r&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T]SalutationHelper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_c_o__c</fullName>
        <formula>Account.BillingAddressCo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing c/o</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestInCaregiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Caregiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SetOptOutEmailCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Die Email des Kontakts ist &quot;Hard bounced&quot;. Wenn das Feld nach den nächsten zwei Wochen immer noch angehakt ist, wird der Kontakt auf &quot;Opt-out&quot; gesetzt und nicht mehr per E-Mail benachrichtigt</inlineHelpText>
        <label>wird auf Opt-Out gesetzt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contract_c_o__c</fullName>
        <formula>Account.ContractAddressCo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract c/o</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_c_o__c</fullName>
        <formula>Account.ShippingAddressCo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping c/o</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResposibilityDoctors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resposibility Doctors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Contract_City__c</fullName>
        <formula>Account.ContractCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Adress__c</fullName>
        <description>Will be used for E-Mail Template and Data Check with Customer</description>
        <formula>IF(ISBLANK(Account.AccountnameBillingAddress__c),&quot;&quot;, Account.AccountnameBillingAddress__c &amp;  BR() ) &amp;
IF(ISBLANK(Account.BillingAddressCo__c)         ,&quot;&quot;, Account.BillingAddressCo__c          &amp;  BR() ) &amp;
IF(ISBLANK(Account.BillingStreet)               ,&quot;&quot;, Account.BillingStreet                &amp;  BR() ) &amp;

IF(ISBLANK(Account.BillingPostalCode)           ,&quot;&quot;, Account.BillingPostalCode &amp; &quot; &quot;              ) &amp;
IF(ISBLANK(Account.BillingCity)                 ,&quot;&quot;, Account.BillingCity                          ) &amp;

IF(ISBLANK(Account.BillingCountry)              ,&quot;&quot;, Account.BillingCountry                       )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobDescriptionPosition__c</fullName>
        <label>Job Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Marketo_Opt_Out__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Marketo Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contract_Adress__c</fullName>
        <description>Will be used for E-Mail Template and Data Check with Customer</description>
        <formula>IF(ISBLANK(Account.AccountnameContractAddress__c),&quot;&quot;, Account.AccountnameContractAddress__c  &amp; BR() ) &amp;
IF(ISBLANK(Account.ContractAddressCo__c)         ,&quot;&quot;, Account.ContractAddressCo__c           &amp; BR() ) &amp;
IF(ISBLANK(Account.ContractStreet__c)            ,&quot;&quot;, Account.ContractStreet__c              &amp; BR() ) &amp;
IF(ISBLANK(Account.ContractPostalCode__c),&quot;&quot;,Account.ContractPostalCode__c) &amp; &quot; &quot; &amp;  IF(ISBLANK(Account.ContractCity__c),&quot;&quot;, Account.ContractCity__c  &amp; BR()) &amp;
IF(ISBLANK(TEXT(Account.ContractCountry__c))     ,&quot;&quot;, TEXT(Account.ContractCountry__c)              )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contract_Street__c</fullName>
        <formula>Account.ContractStreet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Adress__c</fullName>
        <description>Will be used for E-Mail Template and Data Check with Customer</description>
        <formula>IF(ISBLANK( Account.Name ),&quot;&quot;, Account.Name &amp; BR() ) &amp;
IF(ISBLANK( Account.ShippingAddressCo__c ),&quot;&quot;, Account.ShippingAddressCo__c &amp; BR() ) &amp;
IF(ISBLANK( Account.ShippingStreet ) ,&quot;&quot;, Account.ShippingStreet &amp; BR() ) &amp;

IF(ISBLANK( Account.ShippingPostalCode ) ,&quot;&quot;, Account.ShippingPostalCode &amp; &quot; &quot; ) &amp;
IF(ISBLANK( Account.ShippingCity ) ,&quot;&quot;, Account.ShippingCity ) &amp;

IF(ISBLANK( Account.ShippingCountry ) ,&quot;&quot;, Account.ShippingCountry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Street__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResposibilityCaregivers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resposibility Caregivers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Contract_Country__c</fullName>
        <formula>Account.T_Contract_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Contract Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Shipping_Country__c</fullName>
        <formula>Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdministrationDepartment__c</fullName>
        <label>Administration Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bewerbermanagement</fullName>
                </value>
                <value>
                    <fullName>Buchhaltung/Finanzbuchhaltung</fullName>
                </value>
                <value>
                    <fullName>Einkauf</fullName>
                </value>
                <value>
                    <fullName>Einrichtung</fullName>
                </value>
                <value>
                    <fullName>Finanz- und Rechnungswesen</fullName>
                </value>
                <value>
                    <fullName>Geschäftsführung</fullName>
                </value>
                <value>
                    <fullName>Kaufmännische Abteilung</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Pflegedienst</fullName>
                </value>
                <value>
                    <fullName>Pflegedirektion</fullName>
                </value>
                <value>
                    <fullName>Rechtsabteilung</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Sonstiges</fullName>
                </value>
                <value>
                    <fullName>Verwaltung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_weekly_services__c</fullName>
        <label>Possible weekly services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 Dienste</fullName>
                </value>
                <value>
                    <fullName>3-4 Dienste</fullName>
                </value>
                <value>
                    <fullName>5 oder mehr Dienste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operational_area_ZIP_code__c</fullName>
        <label>Operational area (ZIP code)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Billing_Adress__c</fullName>
        <formula>Account.AccountnameBillingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Billing Adress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_EmailValidationTheChecker__c</fullName>
        <label>[T]_EmailValidationTheChecker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>